objects/ACCObjTest1__c.object
<CustomObject>
    <description>test1111</description>
    <fields>
        <fullName>ACCField1__c</fullName>
        <description>swd</description>
        <label>ACCField1</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCField2__c</fullName>
        <inlineHelpText>qwsdcfvc</inlineHelpText>
        <label>ACCField2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>Ex11ternal Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N1__c</fullName>
        <description>124</description>
        <label>N1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12345</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PLNew1__c</fullName>
        <description>Twt`2</description>
        <label>PLNew1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>007</fullName>
                    <default>true</default>
                    <label>007</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PLnew3__c</fullName>
        <description>sd</description>
        <label>PLnew3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>sd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PLt1__c</fullName>
        <description>Test New</description>
        <label>PLt1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plt3__c</fullName>
        <description>Add Comment</description>
        <label>Plt3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>latest</fullName>
                    <default>true</default>
                    <label>latest</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pl1__c</fullName>
        <description>12356</description>
        <label>pl13</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>fg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TextField15__c</fullName>
        <label>TextField15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f8__c</fullName>
        <label>f8</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>ACCObjTest1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ACCObjTest1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACCObjTest1s</pluralLabel>
    <recordTypes>
        <fullName>SairecordType1</fullName>
        <active>true</active>
        <description>test</description>
        <label>SairecordType1</label>
    </recordTypes>
    <recordTypes>
        <fullName>SairecordType2</fullName>
        <active>false</active>
        <description>zxc</description>
        <label>SairecordType2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>